--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
     <style>
       body,
       h1 {
@@ -27,8 +32,14 @@
       <div class="w3-opacity">
         <div class="w3-clear"></div>
         <header class="w3-center w3-margin-bottom">
+          <img src="/android-chrome-512x512.png">
           <h1><b>COCO UND MONTY </b></h1>
           <p><b>Abenteuer Immunsystem</b></p>
+          <p>Wir freuen uns über Feedback!</p>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSencu0NMmhGQlxKERVnvRhS3uUn517C5tVSZwI5Y40qFuBABQ/viewform?usp=sf_link"
+            >Hier Feedback abgeben</a
+          >
           <p class="w3-padding-16">
             <button class="w3-button w3-green">Android Download</button>
           </p>
@@ -38,7 +49,6 @@
         </header>
       </div>
     </div>
-
     <footer
       class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge"
       style="margin-top: 128px"
@@ -46,7 +56,7 @@
       <p class="w3-medium">
         Ein Projekt der
         <a
-          href="https://www.hs-furtwangen.de/"
+          href="https://www.hs-furtwangen.de/aktuelles/detail/3871-spielerische-lern-app-fuer-kinder-coco-monty-abenteuer-immunsystem/"
           target="_blank"
           class="w3-hover-text-green"
           >HFU</a
