added download links

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="manifest" href="/site.webmanifest" />
     <style>
       body,
@@ -32,7 +28,6 @@
       <div class="w3-opacity">
         <div class="w3-clear"></div>
         <header class="w3-center w3-margin-bottom">
-          <img src="/android-chrome-512x512.png">
           <h1><b>COCO UND MONTY </b></h1>
           <p><b>Abenteuer Immunsystem</b></p>
           <p>Wir freuen uns über Feedback!</p>
@@ -41,10 +36,10 @@
             >Hier Feedback abgeben</a
           >
           <p class="w3-padding-16">
-            <button class="w3-button w3-green">Android Download</button>
+            <a href="https://drive.google.com/drive/folders/1e8O31aUOc2QEKYEGgs9wvvHwctQTbZFH?usp=sharing"><button class="w3-button w3-green">Android Download</button></a>
           </p>
           <p class="w3-padding-16">
-            <button class="w3-button w3-blue">Windows Download</button>
+            <a href="https://drive.google.com/drive/folders/1w9btd2MVG6gEq1h07u337OGRBFgTTkGI?usp=sharing"><button class="w3-button w3-blue">Windows Download</button></a>
           </p>
         </header>
       </div>
