added windows hint

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <p class="w3-padding-16">
             <a href="https://drive.google.com/drive/folders/1w9btd2MVG6gEq1h07u337OGRBFgTTkGI?usp=sharing"><button class="w3-button w3-blue">Windows Download</button></a>
           </p>
+          <i>Für Windows beide Dateien herunterladen und im gleichen Ordner speichern. "Coco&Monty-Abenteuer-Immunsystem.exe" ausführen.</i>
         </header>
       </div>
     </div>
