--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
           <h1><b>COCO UND MONTY </b></h1>
           <p><b>Abenteuer Immunsystem</b></p>
           <p>Wir freuen uns über Feedback!</p>
-          <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSencu0NMmhGQlxKERVnvRhS3uUn517C5tVSZwI5Y40qFuBABQ/viewform?usp=sf_link"
-            >Hier Feedback abgeben</a
-          >
+          <p class="w3-padding-16">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSencu0NMmhGQlxKERVnvRhS3uUn517C5tVSZwI5Y40qFuBABQ/viewform?usp=sf_link"><button class="w3-button w3-red">Feedback abgeben</button></a>
+          </p>
           <p class="w3-padding-16">
             <a href="https://drive.google.com/drive/folders/1e8O31aUOc2QEKYEGgs9wvvHwctQTbZFH?usp=sharing"><button class="w3-button w3-green">Android Download</button></a>
           </p>
